# whisper.cpp

.github/workflows/: build-wasm.yml
examples/stream.wasm/: CMakeLists.txt
examples/whisper.wasm/: CMakeLists.txt
